@@ -1,4 +1,8 @@
-﻿drkns 01.02.2016 23:00:10 +0200 - build 4530
+﻿drkns 02.02.2016 09:55:00 +0200 - build 4531
+
+1. При удалении элемента из списка дополнения не обновлялось содержимое комстроки.
+
+drkns 01.02.2016 23:00:10 +0200 - build 4530
 
 1. Оптимизация 4525 для System.WindowMode = true
 
